--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.1",
     "firebase": "^11.0.1",
     "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
     "tailwind": "^4.0.0"
   }
 }
