--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
     "tailwind": "^4.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "sequelize-cli": "^6.6.2",
+    "tailwindcss": "^3.4.14"
   }
 }
